fix: small bugs

--- a/.clintrc
+++ b/.clintrc
@@ -10,10 +10,10 @@
         "union-suffix": "_u",
         "enum-suffix": "_e",
         "require-style": "under_score",
-        "minimum-length": 3,
+        "minimum-length": 2,
         "allow-short-on-top": false,
         "allow-short-in-loop": true,
-        "allow-short-in-block": false,
+        "allow-short-in-block": true,
         "disallow-leading-underscore": true
     },
 
